# benmcavoy.uk

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  livereload_server.py  pyproject.toml
static/: spa.js  styles.css
templates/: about.html  carbon-launcher.html  contact.html  cv.html  imdl.html  index.html  lunatic-engine.html  notepad-renderer.html  rustigo.html  sm-record.html
templates/fragments/: base.html  footer.html  header.html
